--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "it-incubator-todolist-ts",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/PavloHorbatiuk/Todolist",
+  "homepage": "https://PavloHorbatiuk.github.io/Todolist",
   "dependencies": {
+    "-": "^0.0.1",
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
@@ -11,20 +12,24 @@
     "@mui/icons-material": "^5.1.1",
     "@mui/material": "^5.1.1",
     "@mui/styled-engine-sc": "^5.1.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.7",
-    "@types/react": "^17.0.34",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.11.9",
+    "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
-    "@types/uuid": "^8.3.1",
+    "@types/uuid": "^8.3.3",
+    "check": "^1.0.0",
+    "g": "^2.0.1",
     "gh-pages": "^3.2.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
+    "npm": "^8.1.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
-    "typescript": "^4.4.4",
+    "typescript": "^4.5.2",
+    "updates": "^12.2.2",
     "uuid": "^8.3.2"
   },
   "scripts": {
