--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^16.11.9",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.20",
     "@types/uuid": "^8.3.3",
     "check": "^1.0.0",
     "g": "^2.0.1",
@@ -26,7 +27,9 @@
     "npm": "^8.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.2",
     "updates": "^12.2.2",
